# quantum-stepping-stones

./: 00-The_Basics.ipynb  README.md  app.py  main.py  pyproject.toml  requirements.txt  thesis_main.mplstyle
notebooks/: 00-The_Basics.ipynb
pages/: 1_Repetition.py  2_3Qubit_BitFlip.py  3_PhaseFlip_H_Sandwich.py  4_Stabilizer_Playground.py
qec/: __init__.py  analytics.py  challenges.py  circuits.py  codes.py  decoders.py  error_models.py  stabilizers.py
tests/: test_bitflip_decoder.py  test_commutation.py  test_repetition.py
