[project]
name = "qec-learn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.7.3",
    "hypothesis>=6.140.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "networkx>=3.5",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pylatexenc>=2.10",
    "pytest>=8.4.2",
    "scipy>=1.16.2",
    "streamlit>=1.50.0",
    "xkcd>=2.4.2",
]
